2002-06-12  Bruno Haible  <bruno@clisp.org>

	* socket.d (CLOSESOCKET): Make macro more robust.

2002-06-12  Bruno Haible  <bruno@clisp.org>

	* m4/lcmessage.m4 (AM_LC_MESSAGES): Don't test ac_cv_header_locale_h
	here.
	* m4/gettext.m4 (AM_INTL_SUBDIR): Test it here.
	* configure.in: Call AM_LC_MESSAGES.
	* unixconf.h.in (HAVE_LC_MESSAGES): New macro.
	* win32.d (HAVE_LC_MESSAGES): New macro.
	* spvw_ctype.d (init_ctype): Use HAVE_LC_MESSAGES.

2002-06-12  Eduard Haritonov <hed@iis.nsk.su>
	    Arseny Slobodjuck  <ampy@ich.dvo.ru>

	Long awaited Russian translations
	* po/Makefile.devel: added ru language
	* po/Makefile.trans.ru: new translator's makefile
	* po/ru.po: new translations file

2002-06-11  Sam Steingold  <sds@gnu.org>

	* complete.lisp (completion): restored adding ")" when completing
	a function without arguments, broken since FUNCTION-SIGNATURE was
	modified to return the function name as the first value

2002-06-11  Sam Steingold  <sds@gnu.org>

	* spvw.d (main): added an undocumented, unsupported `-d'
	developer option: not in usage(), clisp.c, clisp.html, clisp.1 &c
	for now just unlock all packages

2002-06-11  Sam Steingold  <sds@gnu.org>

	* makemake.in (XCFLAGS) [darwin]: add `--traditional-cpp'
	(--verbose): new option

2002-06-11  Sam Steingold  <sds@gnu.org>

	* spvw_ctype.d (init_ctype) [UNIX_DARWIN]: no LC_MESSAGES,
	just like on WIN32_NATIVE

2002-06-10  Sam Steingold  <sds@gnu.org>

	* charstrg.d (string_gleich): use string_eqcomp()
	(string_equal): use string_eqcomp_ci()

2002-06-10  Sam Steingold  <sds@gnu.org>

	make string element access slightly easier: use schar()
	* lispbibl.d (schar): define
	* charstrg.d (schar) [HAVE_SMALL_SSTRING]: implement
	(coerce_char, CHAR, SCHAR): use schar()
	* array.d (storagevector_aref): use schar()
	* debug.d (read_form): ditto
	* io.d (sstring_printf): ditto
	* pathname.d (schar): removed
	(parse_logical_word, parse_logical_host_prefix)
	(parse_logical_pathnamestring, translate_nametype_aux)